tests/Tuc/Fixtures/errors/SectionWithoutName.tuc
tuc parse error test
participants
    GenericService parts

section
